# test-schema

./: Cargo.toml  Makefile  shell.nix
lambda/api-1/: Cargo.toml
lambda/api-1/src/: docs.rs  request.rs
lambda/api-2/: Cargo.toml
lambda/api-2/src/: docs.rs  response.rs
schemas/: Api1Request.json  Api2Response.json
