[package]
name = "api-1"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
serde = "1.0.152"
serde_json = "1.0.92"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
schemars = { workspace = true, features = ["chrono"] }
ulid = { version = "1.0.0", features = ["serde"] }

[[bin]]
name = "api-1"
path = "src/main.rs"

[[bin]]
name = "api-1-docs"
path = "src/docs.rs"
